helm/nginx-ingress/test/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: http-svc
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer: "ca-cluster-issuer"

spec:
  tls:
  - hosts:
    - http.cluster.io
    secretName: quickstart-example-tls
  rules:
  - host: http.cluster.io
    http:
      paths:
      - path: /
        backend:
          serviceName: http-svc
          servicePort: 80
